Adding dependencies to jobs

--- a/.github/workflows/python-greetings.yml
+++ b/.github/workflows/python-greetings.yml
@@ -16,6 +16,7 @@ jobs:
 
   deploy-to-dev:
     runs-on: self-hosted
+    needs: [install-pip-deps]
     steps:
       - uses: actions/checkout@v3.5.2
       - name: Print output
@@ -23,6 +24,7 @@ jobs:
 
   tests-on-dev:
     runs-on: self-hosted
+    needs: [deploy-to-dev]
     steps:
       - uses: actions/checkout@v3.5.2
       - name: Print output
@@ -30,6 +32,7 @@ jobs:
 
   deploy-to-staging:
     runs-on: self-hosted
+    needs: [tests-on-dev]
     steps:
       - uses: actions/checkout@v3.5.2
       - name: Print output
@@ -37,6 +40,7 @@ jobs:
 
   tests-on-staging:
     runs-on: self-hosted
+    needs: [deploy-to-staging]
     steps:
       - uses: actions/checkout@v3.5.2
       - name: Print output
@@ -44,6 +48,7 @@ jobs:
 
   deploy-to-preprod:
     runs-on: self-hosted
+    needs: [tests-on-staging]
     steps:
       - uses: actions/checkout@v3.5.2
       - name: Print output
@@ -51,6 +56,7 @@ jobs:
 
   tests-on-preprod:
     runs-on: self-hosted
+    needs: [deploy-to-preprod]
     steps:
       - uses: actions/checkout@v3.5.2
       - name: Print output
@@ -58,6 +64,7 @@ jobs:
 
   deploy-to-prod:
     runs-on: self-hosted
+    needs: [tests-on-preprod]
     steps:
       - uses: actions/checkout@v3.5.2
       - name: Print output
@@ -65,6 +72,7 @@ jobs:
 
   tests-on-prod:
     runs-on: self-hosted
+    needs: [deploy-to-prod]
     steps:
       - uses: actions/checkout@v3.5.2
       - name: Print output
