--- a/.github/workflows/python-greetings.yml
+++ b/.github/workflows/python-greetings.yml
@@ -11,69 +11,60 @@ jobs:
     runs-on: self-hosted
     steps:
       - uses: actions/checkout@v3.5.2
-      - name: Print output
-        run: echo Installing all required dependencies..
+      - uses: ./.github/actions/installPipDeps
 
   deploy-to-dev:
     runs-on: self-hosted
     needs: [install-pip-deps]
     steps:
       - uses: actions/checkout@v3.5.2
-      - name: Print output
-        run: echo Deployment to dev has started..
+      - uses: ./.github/actions/deploy
 
   tests-on-dev:
     runs-on: self-hosted
     needs: [deploy-to-dev]
     steps:
       - uses: actions/checkout@v3.5.2
-      - name: Print output
-        run: echo Testing on dev has started..
+      - uses: ./.github/actions/test
 
   deploy-to-staging:
     runs-on: self-hosted
     needs: [tests-on-dev]
     steps:
       - uses: actions/checkout@v3.5.2
-      - name: Print output
-        run: echo Deployment to staging has started..
+      - uses: ./.github/actions/deploy
 
   tests-on-staging:
     runs-on: self-hosted
     needs: [deploy-to-staging]
     steps:
       - uses: actions/checkout@v3.5.2
-      - name: Print output
-        run: echo Testing on staging has started..
+      - uses: ./.github/actions/test
 
   deploy-to-preprod:
     runs-on: self-hosted
     needs: [tests-on-staging]
     steps:
       - uses: actions/checkout@v3.5.2
-      - name: Print output
-        run: echo Deployment to preprod has started..
+      - uses: ./.github/actions/deploy
 
   tests-on-preprod:
     runs-on: self-hosted
     needs: [deploy-to-preprod]
     steps:
       - uses: actions/checkout@v3.5.2
-      - name: Print output
-        run: echo Testing on preprod has started..
+      - uses: ./.github/actions/test
 
   deploy-to-prod:
     runs-on: self-hosted
     needs: [tests-on-preprod]
     steps:
       - uses: actions/checkout@v3.5.2
-      - name: Print output
-        run: echo Deployment to prod has started..
+      - uses: ./.github/actions/deploy
 
   tests-on-prod:
     runs-on: self-hosted
     needs: [deploy-to-prod]
     steps:
       - uses: actions/checkout@v3.5.2
-      - name: Print output
-        run: echo Testing on prod has started..
+      - uses: ./.github/actions/test
