--- a/.github/actions/deploy/action.yml
+++ b/.github/actions/deploy/action.yml
@@ -1,6 +1,13 @@
+inputs:
+  port:
+    description: 'Specify port for Python application to run'
+    default: 7001
+  environment:
+    description: 'Environment for Python application'
+    default: 'dev'
 runs:   
   using: "composite"
   steps:
     - name: Print output
-      run: echo Deployment to (...) has started..
+      run: echo Deployment to ${{ inputs.environment }} has started..
       shell: cmd
