--- a/.github/actions/installPipDeps/action.yml
+++ b/.github/actions/installPipDeps/action.yml
@@ -2,5 +2,8 @@ runs:
   using: "composite"
   steps:
     - name: Print output
-      run: echo Installing all required dependencies..
+      working-directory: python-greetings
+      run: |
+        echo Installing all required dependencies..
+        pip install -r requirements.txt 
       shell: cmd
