--- a/.github/actions/deploy/action.yml
+++ b/.github/actions/deploy/action.yml
@@ -9,5 +9,9 @@ runs:
   using: "composite"
   steps:
     - name: Print output
-      run: echo Deployment to ${{ inputs.environment }} has started..
+      working-directory: python-greetings
+      run: |
+        echo Deployment to ${{ inputs.environment }} has started..
+        pm2 delete greetings-app-${{ inputs.environment }} & EXIT /B 0
+        pm2 start app.py --name greetings-app-${{ inputs.environment }} -- --port ${{ inputs.port }}
       shell: cmd
