Delete and start deploy services in deploy's composite action

--- a/.github/actions/deploy/action.yml
+++ b/.github/actions/deploy/action.yml
@@ -12,8 +12,6 @@ runs:
       working-directory: python-greetings
       run: |
         echo Deployment to ${{ inputs.environment }} has started..
-        
+        pm2 delete greetings-app-${{ inputs.environment }} & EXIT /B 0
         pm2 start app.py --name greetings-app-${{ inputs.environment }} -- --port ${{ inputs.port }}
       shell: cmd
-
-      # pm2 delete greetings-app-${{ inputs.environment }} & EXIT /B 0
