--- a/.github/workflows/python-greetings.yml
+++ b/.github/workflows/python-greetings.yml
@@ -22,10 +22,8 @@ jobs:
     needs: [install-pip-deps]
     steps:
       - uses: actions/checkout@v3.5.2
-      - uses: actions/checkout@v3.5.2
         with:
-          repository: 'mtararujs/python-greetings'
-          path: 'python-greetings'
+          clean: false
       - uses: ./.github/actions/deploy
         with:
           port: 7001
@@ -36,10 +34,8 @@ jobs:
     needs: [deploy-to-dev]
     steps:
       - uses: actions/checkout@v3.5.2
-      - uses: actions/checkout@v3.5.2
         with:
-          repository: 'mtararujs/course-js-api-framework'
-          path: 'course-js-api-framework'
+          clean: false
       - uses: ./.github/actions/test
         with:
           environment: 'dev'
@@ -49,10 +45,8 @@ jobs:
     needs: [tests-on-dev]
     steps:
       - uses: actions/checkout@v3.5.2
-      - uses: actions/checkout@v3.5.2
         with:
-          repository: 'mtararujs/python-greetings'
-          path: 'python-greetings'
+          clean: false
       - uses: ./.github/actions/deploy
         with:
           port: 7002
@@ -63,10 +57,8 @@ jobs:
     needs: [deploy-to-staging]
     steps:
       - uses: actions/checkout@v3.5.2
-      - uses: actions/checkout@v3.5.2
         with:
-          repository: 'mtararujs/course-js-api-framework'
-          path: 'course-js-api-framework'
+          clean: false
       - uses: ./.github/actions/test
         with:
           environment: 'staging'
@@ -76,10 +68,8 @@ jobs:
     needs: [tests-on-staging]
     steps:
       - uses: actions/checkout@v3.5.2
-      - uses: actions/checkout@v3.5.2
         with:
-          repository: 'mtararujs/python-greetings'
-          path: 'python-greetings'
+          clean: false
       - uses: ./.github/actions/deploy
         with:
           port: 7003
@@ -90,10 +80,8 @@ jobs:
     needs: [deploy-to-preprod]
     steps:
       - uses: actions/checkout@v3.5.2
-      - uses: actions/checkout@v3.5.2
         with:
-          repository: 'mtararujs/course-js-api-framework'
-          path: 'course-js-api-framework'
+          clean: false
       - uses: ./.github/actions/test
         with:
           environment: 'preprod'
@@ -103,10 +91,8 @@ jobs:
     needs: [tests-on-preprod]
     steps:
       - uses: actions/checkout@v3.5.2
-      - uses: actions/checkout@v3.5.2
         with:
-          repository: 'mtararujs/python-greetings'
-          path: 'python-greetings'
+          clean: false
       - uses: ./.github/actions/deploy
         with:
           port: 7004
@@ -117,10 +103,8 @@ jobs:
     needs: [deploy-to-prod]
     steps:
       - uses: actions/checkout@v3.5.2
-      - uses: actions/checkout@v3.5.2
         with:
-          repository: 'mtararujs/course-js-api-framework'
-          path: 'course-js-api-framework'
+          clean: false
       - uses: ./.github/actions/test
         with:
           environment: 'prod'
