--- a/.github/actions/deploy/action.yml
+++ b/.github/actions/deploy/action.yml
@@ -12,6 +12,11 @@ runs:
       run: echo Deployment to ${{ inputs.environment }} has started..
       shell: cmd
 
+    - uses: actions/checkout@v3.5.2
+      with:
+        repository: 'mtararujs/python-greetings'
+        path: 'python-greetings'
+
     - name: Delete service
       working-directory: python-greetings
       run: pm2 delete greetings-app-${{ inputs.environment }} & EXIT /B 0
