--- a/.github/actions/test/action.yml
+++ b/.github/actions/test/action.yml
@@ -6,9 +6,13 @@ runs:
   using: "composite"
   steps:
     - name: Print output
-      working-directory: course-js-api-framework
       run: echo Testing on ${{ inputs.environment }} has started..
       shell: cmd
+
+    - uses: actions/checkout@v3.5.2
+      with:
+        repository: 'mtararujs/course-js-api-framework'
+        path: 'course-js-api-framework'
 
     - name: Install depedencies
       working-directory: course-js-api-framework
